added api to update draft